crates/analyzer/tests/snapshots/errors__module_const_not_literal.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: non-literal expressions not yet supported for constants
  ┌─ compile_errors/module_const_not_literal.fe:1:19
  │
1 │ const FOO: u256 = 1 + 2
  │                   ^^^^^ not a literal


